--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.picture-text {
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+  border: 5px solid black;
+  padding: 25px;
+  height: 550px ;
+  width: 375px ;
+}
+.image {
+  height: 400px ;
+  width: 200px ;
+
+  justify-items: center;
+}
+svg{
+  width: 20px;
+ 
+}
+.text {
+  font-size: 20px;
+  font-weight: 10px;
+  margin-top: 10px;
+}
+.stars {
+  display: flex;
+  justify-content: center;
+}
